feat:  news with login & logout

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,9 +41,13 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
+  /* config breakpoint for xs */
+  --breakpoint-xs: 480px;
 }
 
 :root {
+  --header-height: 69px;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
@@ -51,8 +55,9 @@
   --card-foreground: oklch(0.141 0.005 285.823);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.141 0.005 285.823);
-  --primary: oklch(0.21 0.006 285.885);
-  --primary-foreground: oklch(0.985 0 0);
+
+  --primary: oklch(0.462 0.155 260.6);
+  --primary-foreground: oklch(0.97 0 90);
   --secondary: oklch(0.967 0.001 286.375);
   --secondary-foreground: oklch(0.21 0.006 285.885);
   --muted: oklch(0.967 0.001 286.375);
@@ -119,4 +124,28 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+
+.bg-gradient-br-sky-purple {
+  @apply  bg-gradient-to-br from-sky-50 to-purple-50
+}
+
+
+@keyframes slideUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+html {
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+  
 }
